# neo-rs

./: ._COMPREHENSIVE_INTEGRATION_TEST_ASSESSMENT.md  ._COMPREHENSIVE_REVIEW.md  ._COMPREHENSIVE_RUST_NODE_PRODUCTION_ASSESSMENT.md  ._CONSENSUS_FIXES_SUMMARY.md  ._Cargo.toml  ._DEVELOPMENT_ROADMAP.md  ._FINAL_PRODUCTION_ASSESSMENT.md  ._PRODUCTION_READINESS_ASSESSMENT.md  ._PRODUCTION_READINESS_ASSESSMENT_ACCURATE.md  ._PRODUCTION_READINESS_FINAL.md  ._PRODUCTION_READY_STATUS.md  ._PROGRESS_SUMMARY.md  ._REALISTIC_PROJECT_STATUS.md  ._cli  ._crates  ._docs  ._src  ._temp_test  ._temp_test.rs  ._test_base58.rs  ._test_network_connectivity.rs  .dockerignore  .env.example  .env.professional  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_REPORT.md  API_COMPATIBILITY_REQUIREMENTS.md  APPLIED_RECOMMENDATIONS_SUMMARY.md  ARCHITECTURE.md  AUDIT_REPORT_CODEX.md  AUTOMATED_TEST_GENERATION_REPORT.md  BLOCKCHAIN_ISSUE_FIX.md  BUILD_FIX_REPORT.md  BUILD_REPORT.md  CHANGELOG.md  CODE_QUALITY_ANALYSIS.md  CODE_QUALITY_IMPROVEMENTS_REPORT.md  (+351 more)
benches-package/: Cargo.toml  build.rs
benches-package/benches/: block_processing.rs  state_root.rs  vm_execution.rs
benches-package/src/: lib.rs
demo/: Cargo.toml
demo/src/: ._comprehensive_demo.rs  comprehensive_demo.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_message_parse.rs  fuzz_script_parse.rs  fuzz_transaction_parse.rs  transaction_fuzzer.rs
integration-demo/: Cargo.toml  README.md
integration-demo/src/: main.rs
neo-actors/: Cargo.toml
neo-actors/src/: actor_path.rs  actor_ref.rs  actor_system.rs  error.rs  event_stream.rs  lib.rs  props.rs  task_executor.rs  tests.rs
neo-akka/: Cargo.toml
neo-akka/src/: actor.rs  actor_ref.rs  actor_system.rs  context.rs  event_stream.rs  inbox.rs  lib.rs  message.rs  props.rs  tests.rs
neo-application-logs/: Cargo.toml
neo-application-logs/src/: lib.rs  service.rs  settings.rs
neo-base/: Cargo.toml  READ.md  README.md
neo-base/src/: bytes.rs  defer.rs  errors.rs  hash.rs  lib.rs  mem.rs  merkle.rs  time.rs  uint.rs
neo-block/: Cargo.toml
neo-block/src/: application_executed.rs  lib.rs  notify_event_args.rs  transaction_state.rs  verify_result.rs
neo-blockchain/: Cargo.toml
neo-blockchain/src/: block_processing.rs  block_validation.rs  command.rs  fill_completed.rs  handle.rs  handlers.rs  header_cache.rs  import.rs  internal.rs  inventory_payload.rs  ledger_context.rs  ledger_records.rs  lib.rs  native_persist.rs  preverify_completed.rs  relay_result.rs  service.rs  service_context.rs  state_root_consensus.rs  state_root_verify.rs  transaction.rs
neo-chain/: Cargo.toml
neo-chain/src/: block_index.rs  block_validation.rs  chain_state.rs  error.rs  events.rs  fork_choice.rs  lib.rs  validation.rs
neo-cli/: Cargo.toml
neo-cli/src/: main.rs  main_professional.rs
neo-config/: Cargo.toml
neo-config/src/: consensus_settings.rs  error.rs  genesis.rs  hardfork.rs  lib.rs  logging_settings.rs  network.rs  network_config.rs  network_type.rs  node_settings.rs  protocol.rs  rpc_settings.rs  settings.rs  storage_settings.rs  telemetry_settings.rs
neo-consensus/: Cargo.toml
neo-consensus/.serena/: project.yml
neo-consensus/src/: change_view_reason.rs  context.rs  dbft.rs  error.rs  lib.rs  message.rs  message_type.rs  persistence.rs  service.rs  signer.rs  state.rs  validator.rs
neo-contract/: Cargo.toml
neo-contract/src/: contract_basic_method.rs  contract_parameter_type.rs  error.rs  find_options.rs  lib.rs  manifest.rs  method_token.rs  native.rs  role.rs  runtime.rs  state.rs  storage_context.rs  trigger_type.rs
neo-core/: Cargo.toml  READ.md  build.rs
neo-core/.serena/: project.yml
neo-core/benches/: serialization.rs  storage.rs
neo-core/examples/: build_trie_from_hex_pairs.rs  check_local_roots.rs  check_unclaimed_gas.rs  count_state_at_root.rs  disassemble_contract_script.rs  disassemble_tx.rs  dump_block_header.rs  dump_block_txs.rs  dump_genesis_trie.rs  dump_state_root.rs  dump_tx_full.rs  dump_tx_raw.rs  find_txs_by_script_hex.rs  find_txs_by_script_text.rs  gas_balance_at_root.rs  get_state_at_root.rs  inspect_contract_state.rs  inspect_gas_balance.rs  inspect_neo_account_state.rs  list_raw_prefix.rs  list_storage_prefix.rs  print_height.rs  print_storage_key.rs  print_tx_state.rs  rebuild_trie_4410.rs  replay_tx_once.rs  scan_sender_txs.rs
neo-core/src/: big_decimal.rs  block.rs  blockchain.rs  collections.rs  constants.rs  contains_transaction_type.rs  core_error.rs  error.rs  h160.rs  h256.rs  hardfork.rs  io.rs  ledger.rs  lib.rs  macros.rs  merkle.rs  neo_system.rs  neo_vm.rs  prelude.rs  protocol_settings.rs  rpc_json.rs  script_builder.rs  script_validation.rs  sign.rs  time_provider.rs  uint160.rs  uint256.rs  unhandled_exception_policy.rs  utility.rs  validation.rs  vm_runtime.rs  witness.rs  witness_rule.rs
neo-core/tests/: actor_runtime_compat_tests.rs  application_engine_contract_tests.rs  application_engine_runtime_tests.rs  base58_tests.rs  block_serialization_compatibility_tests.rs  block_sync_tests.rs  block_validation_compliance_tests.rs  blockchain_import_failure_tests.rs  bloom_filter_tests.rs  call_flags_syscall_tests.rs  call_native_marshalling_tests.rs  contract_parameters_context_tests.rs  contract_permission_descriptor_tests.rs  contract_script_parity_tests.rs  crypto_interop_tests.rs  crypto_lib_tests.rs  cryptography_tests.rs  csharp_compatibility_tests.rs  gas_token_compliance_tests.rs  hash_index_state_tests.rs  header_cache_tests.rs  integration_tests.rs  interoperable_not_supported_tests.rs  io_tests.rs  ledger_contract_tests.rs  ledger_tests.rs  local_node_relay_tests.rs  (+72 more)
neo-crypto/: Cargo.toml  READ.md  README.md
neo-crypto/src/: aes.rs  (+28 more)
neo-data-cache/: Cargo.toml
neo-error/: Cargo.toml
neo-event-handlers/: Cargo.toml
neo-events/: Cargo.toml
neo-execution/: Cargo.toml
neo-extensions/: Cargo.toml
neo-gui/: Cargo.toml  README.md
neo-hsm/: Cargo.toml
neo-indexer/: Cargo.toml
neo-io/: Cargo.toml
neo-json/: Cargo.toml
neo-ledger-types/: Cargo.toml
(+8753 files in other folders)
