[workspace]
resolver = "2"
members = [
    # === Foundation Layer (no neo-* dependencies) ===
    # Primitive types (UInt160, UInt256, BigDecimal)
    "neo-primitives",

    # Cryptography (hashing, ECC, signatures)
    "neo-crypto",

    # Storage traits and abstractions
    "neo-storage",

    # IO (matches C# Neo.IO)
    "neo-io",

    # JSON (matches C# Neo.Json)
    "neo-json",

    # === Core Layer ===
    # Core (matches C# Neo.csproj)
    "neo-core",

    # VM (matches C# Neo.VM)
    "neo-vm",

    # P2P networking
    "neo-p2p",

    # RPC server and client
    "neo-rpc",

    # dBFT consensus
    "neo-consensus",

    # Extensions (matches C# Neo.Extensions)

    # === Infrastructure Layer ===
    # Actor runtime merged into neo-core/src/akka/
    # "neo-akka",

    # Plugins (matches C# Neo.Plugins)
    # TEMPORARILY EXCLUDED: Being refactored - functionality to be inlined to target modules
    # "neo-plugins",

    # TEE (Trusted Execution Environment) support
    # Optional feature-gated integration via neo-node (`--features tee`)
    "neo-tee",

    # === Configuration ===
    # Configuration management
    "neo-config",

    # === Telemetry ===
    # Observability stack
    "neo-telemetry",

    # === State Layer ===
    # World state abstraction
    "neo-state",

    # === Chain Management ===
    # Transaction mempool
    "neo-mempool",

    # Blockchain state and chain management
    "neo-chain",

    # === Application Layer ===
    # CLI client
    "neo-cli",

    # Node daemon (standalone RPC server)
    "neo-node",

    # === Integration Tests ===
    "tests",
]
exclude = [
    "target",
    "data",
    "docs",
    "examples",
    "neo_csharp",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.75"
authors = [
    "R3E Network <jimmy@r3e.network>"
]
homepage = "https://neo.org"
repository = "https://github.com/r3e-network/neo-rs"
documentation = "https://docs.rs/neo-rs"
license = "MIT"
keywords = ["blockchain", "neo", "smart-contracts", "cryptocurrency", "consensus"]
categories = ["cryptography", "network-programming", "database", "development-tools"]
readme = "README.md"

[workspace.metadata]
# Minimum supported Rust version policy
msrv = "1.70.0"

[workspace.dependencies]
# === Internal crates ===
# Foundation layer
neo-primitives = { path = "neo-primitives", version = "0.7.0" }
neo-crypto = { path = "neo-crypto", version = "0.7.0" }
neo-storage = { path = "neo-storage", version = "0.7.0" }
neo-io = { path = "neo-io", version = "0.7.0" }
neo-json = { path = "neo-json", version = "0.7.0" }

# Core layer
neo-core = { path = "neo-core", version = "0.7.0" }
neo-vm = { path = "neo-vm", version = "0.7.0" }
neo-p2p = { path = "neo-p2p", version = "0.7.0" }
neo-rpc = { path = "neo-rpc", version = "0.7.0" }
neo-consensus = { path = "neo-consensus", version = "0.7.0" }

# Infrastructure layer
# neo-akka merged into neo-core/src/akka/
# neo-akka = { path = "neo-akka", version = "0.7.0" }
neo-tee = { path = "neo-tee", version = "0.7.0" }

# Configuration
neo-config = { path = "neo-config", version = "0.7.0" }

# Telemetry
neo-telemetry = { path = "neo-telemetry", version = "0.7.0" }

# Chain management
neo-mempool = { path = "neo-mempool", version = "0.7.0" }
neo-chain = { path = "neo-chain", version = "0.7.0" }

# Application layer
neo-cli = { path = "neo-cli", version = "0.7.0" }
neo-node = { path = "neo-node", version = "0.7.0" }

# === Core dependencies ===
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.4", features = ["derive", "env", "unicode"] }

# === Cryptography ===
# Elliptic curve cryptography
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
p256 = { version = "0.13", features = ["ecdsa", "sha256"] }

# BLS12-381 cryptography
blst = "0.3"

# Hashing
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
blake2 = "0.10"
blake3 = "1.5"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# === Encoding ===
hex = "0.4"
bs58 = "0.5"
base64 = "0.21"

# === Utility macros ===
derive_more = "0.99"
lazy_static = "1.4"
once_cell = "1.19"

# === Numeric types ===
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rust_decimal = { version = "1.33", features = ["serde"] }

# === Data structures ===
bytes = "1.5"
hashbrown = { version = "0.14", features = ["serde"] }
indexmap = { version = "2.1", features = ["serde"] }
lru = "0.12"
dashmap = "5.5"

# === Storage ===
rocksdb = { version = "0.21", default-features = false, features = ["snappy", "lz4", "zlib"] }

# === Network ===
# HTTP and JSON-RPC
hyper = { version = "0.14", features = ["full"] }
jsonrpsee = { version = "0.21", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Low-level networking
socket2 = "0.5"
trust-dns-resolver = "0.23"

# === Actor Framework ===
ractor = "0.12"

# === Utilities ===
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
parking_lot = "0.12"
crossbeam = "0.8"

# === Development and testing ===
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"

# Compression and metrics (always enabled)
flate2 = "1.0"
lz4_flex = "0.11"
prometheus = "0.13"
sysinfo = "0.29"

# Additional shared deps not previously centralized
num_cpus = "1.16"

# Profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.test]
opt-level = 1
debug = true
lto = false

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1

# Custom profile for production
[profile.production]
inherits = "release"
debug = false
strip = true
panic = "abort"
lto = "fat"
