[workspace]
resolver = "2"
members = [
    # === Foundation Layer ===
    # Primitive value types (`UInt160`, `UInt256`, `BigDecimal`).
    "neo-primitives",

    # === Infrastructure Layer ===
    # Node and protocol configuration.
    "neo-config",
    # Cryptography: hashing, ECC, signatures, BLS12-381.
    "neo-crypto",
    # Storage traits, `DataCache`, RocksDB, and in-memory stores.
    "neo-storage",
    # Binary IO helpers (matches C# Neo.IO).
    "neo-io",
    # Stateful NeoVM host over the sibling `neo-vm-rs` semantics crate.
    "neo-vm",
    # Authoritative `CoreError` / `CoreResult` vocabulary.
    "neo-error",
    # Compression, binary/JSON serializers, and VM-aware codecs.
    "neo-serialization",
    # Contract ABI, NEF, call flags, method tokens, and validator attributes.
    "neo-manifest",

    # === Protocol Layer ===
    # Canonical Neo P2P payload types (`Block`, `Header`, `Transaction`, ...).
    "neo-payloads",
    # dBFT consensus payloads and protocol engine.
    "neo-consensus",
    # Optional HSM-backed consensus signing support.
    "neo-hsm",

    # === Domain Service Layer ===
    # Reth-style service traits, events, and shared service errors.
    "neo-runtime",
    # Smart-contract execution engine.
    "neo-execution",
    # Native contracts (NEO, GAS, Policy, Oracle, Notary, ...).
    "neo-native-contracts",
    # Ledger state-root service and MPT store.
    "neo-state-service",
    # Transaction memory pool and admission/reverification logic.
    "neo-mempool",

    # === Node Service Layer ===
    # Block validation, persistence, ledger context, and header cache service.
    "neo-blockchain",
    # P2P network host (`LocalNode`, `RemoteNode`, `TaskManager`).
    "neo-network",
    # Wallet/key management.
    "neo-wallets",
    # Read-side block, transaction, account, and notification indexing.
    "neo-indexer",
    # Optional Trusted Execution Environment support.
    "neo-tee",

    # === Composition Layer ===
    # Embeddable node composition root.
    "neo-system",

    # === Plugin / RPC Boundary ===
    # JSON-RPC server/client plus ApplicationLogs, TokensTracker, NeoIndexer, and Oracle groups.
    "neo-rpc",
    # Oracle request fulfilment over HTTPS and NeoFS.
    "neo-oracle-service",

    # === Application Layer ===
    # Node daemon binary.
    "neo-node",

    # === Development-only crates ===
    # Cross-crate integration tests.
    "tests",
    # Criterion benchmarks.
    "benches-package",
]
default-members = [
    "neo-primitives",
    "neo-config",
    "neo-crypto",
    "neo-storage",
    "neo-io",
    "neo-rpc",
    "neo-indexer",
    "neo-consensus",
    "neo-node",
]
exclude = [
    "target",
    "data",
    "docs",
    "examples",
    "neo_csharp",
    "fuzz",
    # Standalone native GUI (eframe app). Built on its own; talks to the node
    # over JSON-RPC + process control, so it stays out of the workspace graph.
    "neo-gui",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
authors = [
    "R3E Network <jimmy@r3e.network>"
]
homepage = "https://neo.org"
repository = "https://github.com/r3e-network/neo-rs"
documentation = "https://docs.rs/neo-rs"
license = "MIT"
keywords = ["blockchain", "neo", "smart-contracts", "cryptocurrency", "consensus"]
categories = ["cryptography", "network-programming", "database", "development-tools"]
readme = "README.md"

[workspace.metadata]
# Minimum supported Rust version policy
msrv = "1.85"

# Centralized lint policy. Every member opts in with `[lints] workspace = true`
# in its own Cargo.toml, so the rules live in exactly one place (replacing the
# per-crate `#![deny(...)]` / `#![warn(...)]` headers). Crates that genuinely
# need unsafe (neo-vm, neo-execution) keep the deny and opt out per-site with
# `#[allow(unsafe_code)]` + a `// SAFETY:` comment.
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

# Clippy policy, moved here from the inline flags in .github/workflows/ci.yml so
# local `cargo clippy` enforces exactly what CI does. `all` is denied (priority
# -1 so the specific allows below win); the allows are the pragmatic exceptions
# the project has accepted.
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
large_enum_variant = "allow"
# Sibling of large_enum_variant: Neo's error enums are intentionally large and
# boxing every Result's Err to shave bytes is not worth the churn.
result_large_err = "allow"
module_inception = "allow"
type_complexity = "allow"
len_zero = "allow"
nonminimal_bool = "allow"
enum_variant_names = "allow"
too_many_arguments = "allow"
field_reassign_with_default = "allow"
assertions_on_constants = "allow"
# False-fires on test byte-vectors that happen to approximate PI.
approx_constant = "allow"

[workspace.dependencies]
# === Internal crates ===
# Foundation layer
neo-primitives = { path = "neo-primitives", version = "0.8.0" }

# Infrastructure layer
neo-config = { path = "neo-config", version = "0.8.0" }
neo-crypto = { path = "neo-crypto", version = "0.8.0" }
neo-storage = { path = "neo-storage", version = "0.8.0" }
neo-io = { path = "neo-io", version = "0.8.0" }
neo-vm = { path = "neo-vm", version = "0.8.0" }
neo-vm-rs = { path = "../neo-vm-rs" }
neo-error = { path = "neo-error", version = "0.8.0" }
neo-serialization = { path = "neo-serialization", version = "0.8.0" }
neo-manifest = { path = "neo-manifest", version = "0.8.0" }

# Protocol layer
neo-payloads = { path = "neo-payloads", version = "0.8.0" }
neo-consensus = { path = "neo-consensus", version = "0.8.0" }
neo-hsm = { path = "neo-hsm", version = "0.8.0" }

# Domain service layer
neo-runtime = { path = "neo-runtime", version = "0.8.0" }
neo-execution = { path = "neo-execution", version = "0.8.0" }
neo-native-contracts = { path = "neo-native-contracts", version = "0.8.0" }
neo-state-service = { path = "neo-state-service", version = "0.8.0" }
neo-mempool = { path = "neo-mempool", version = "0.8.0" }

# Node service layer
neo-blockchain = { path = "neo-blockchain", version = "0.8.0" }
neo-network = { path = "neo-network", version = "0.8.0" }
neo-wallets = { path = "neo-wallets", version = "0.8.0" }
neo-indexer = { path = "neo-indexer", version = "0.8.0" }
neo-tee = { path = "neo-tee", version = "0.8.0" }

# Composition layer
neo-system = { path = "neo-system", version = "0.8.0" }

# Plugin / RPC boundary
neo-rpc = { path = "neo-rpc", version = "0.8.0" }
neo-oracle-service = { path = "neo-oracle-service", version = "0.8.0" }

# Application layer
neo-node = { path = "neo-node", version = "0.8.0" }

# === Core dependencies ===
# Async runtime
tokio = { version = "1.35", default-features = false }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
# CLI
clap = { version = "=4.5.53", features = ["derive", "env", "unicode"] }

# === Cryptography ===
# Elliptic curve cryptography
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
p256 = { version = "0.13", features = ["ecdsa", "sha256"] }

# BLS12-381 cryptography
blst = "0.3"

# Hashing
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
blake2 = "0.10"
blake2b_simd = "1.0"

# Random number generation
rand = "0.8"

# === Encoding ===
hex = "0.4"
bs58 = { version = "0.5", features = ["check"] }
bip39 = { version = "2.2", features = ["all-languages", "zeroize"] }
base64 = "0.22"

# === Numeric types ===
num-bigint = { version = "0.4", features = ["serde"] }
num-integer = "0.1"
num-traits = "0.2"
# === Data structures ===
smallvec = { version = "1.13", features = ["const_new", "union"] }
bytes = "1.5"
hashbrown = { version = "0.14", features = ["serde"] }
indexmap = { version = "=2.8.0", features = ["serde"] }
lru = "0.12"
fastbloom = { version = "0.17", default-features = false }
bitflags = "2.4"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
dashmap = "6.2.1"
governor = { version = "0.10.4", default-features = false, features = ["std", "dashmap"] }
memchr = "2.8"

# === Storage ===
rocksdb = { version = "0.21", default-features = false, features = ["snappy", "lz4", "zlib"] }

# === Network ===
# HTTP and JSON-RPC
hyper = { version = "0.14", default-features = false, features = ["http1", "runtime", "server"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "gzip"] }
# Low-level networking
socket2 = "0.5"

# === Utilities ===
uuid = { version = "=1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "=2.5.4", features = ["serde"] }
parking_lot = "0.12"
# === Development and testing ===
tempfile = "=3.23.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "=1.7.0"
mockall = "0.12"

# === Profiling ===
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

# Compression and metrics (always enabled).
# >=0.11 hardens the safe decoder to return Err instead of panicking on
# malformed input (0.10.0 panicked in sink.rs on crafted compressed payloads —
# a peer-reachable DoS via the P2P message compression path). LZ4 block format
# is unchanged across these versions, so cross-node/C# compatibility holds.
lz4_flex = "=0.13.1"
prometheus = "0.14"
sysinfo = "0.29"

# Additional shared deps not previously centralized
num_cpus = "1.16"
murmur3 = "0.5"
rayon = "=1.10.0"
subtle = "2.5"
byteorder = "1.5"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# Profiles
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.test]
opt-level = 1
debug = true
lto = false

[profile.bench]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1

# Custom profile for production
[profile.production]
inherits = "release"
debug = false
strip = true
panic = "abort"
lto = "fat"
codegen-units = 1
incremental = false
