[package]
name = "neo-benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Criterion benchmarks for the neo-rs workspace"

# This is a workspace member used only for benchmark targets. It is not linked
# into the running node or published as a crate.
# Run with: cargo bench -p neo-benches

[dependencies]
criterion = { workspace = true }
neo-crypto = { workspace = true }
neo-io = { workspace = true }
neo-primitives = { workspace = true }
neo-vm = { workspace = true }
neo-vm-rs = { workspace = true }
neo-payloads = { workspace = true }
hex = { workspace = true }


[[bench]]
name = "block_processing"
harness = false

[[bench]]
name = "state_root"
harness = false

[[bench]]
name = "vm_execution"
harness = false

[lints]
workspace = true
