[package]
name = "neo-demo"
version = "0.1.0"
edition = "2021"
authors = ["Neo Global Development <dev@neo.org>"]

[dependencies]
neo-core = { path = "../crates/core" }
neo-cryptography = { path = "../crates/cryptography" }
neo-persistence = { path = "../crates/persistence" }
tokio = { version = "1.28", features = ["full"] }
hex = "0.4"
tempfile = "3.8"

[[bin]]
name = "comprehensive_demo"
path = "src/comprehensive_demo.rs"
