[package]
name = "neo-rs-fuzz"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["R3E Network <jimmy@r3e.network>"]
license = "MIT"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
neo-io = { path = "../neo-io", version = "0.10.0" }
neo-primitives = { path = "../neo-primitives", version = "0.10.0" }
neo-network = { path = "../neo-network", version = "0.10.0" }
neo-payloads = { path = "../neo-payloads", version = "0.10.0" }
neo-vm-rs = { git = "https://github.com/r3e-network/neo-vm-rs.git", rev = "3081e83db3716fd51dc58c0afc039290d2d07253", version = "0.2.0", default-features = false, features = ["std", "interpreter"] }


[[bin]]
name = "fuzz_transaction_parse"
path = "fuzz_targets/fuzz_transaction_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_script_parse"
path = "fuzz_targets/fuzz_script_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_message_parse"
path = "fuzz_targets/fuzz_message_parse.rs"
test = false
doc = false

[profile.release]
debug = true
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1
debug = true
