[package]
name = "neo-akka"
version = "0.6.0"
edition = "2021"
description = "Actor system inspired by Akka.NET for the neo-rs project"
authors = ["R3E Network <jimmy@r3e.network>"]
license = "MIT"

[dependencies]
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
thiserror = "1.0"
tokio = { version = "1.35", features = ["rt", "macros", "sync", "time"] }
uuid = { version = "1.6", features = ["v4"] }
