[package]
name = "neo-application-logs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "ApplicationLogs plugin for the Neo blockchain (execution-log persistence and RPC query support)"

[dependencies]
neo-core = { path = "../neo-core", features = ["runtime"] }
neo-vm-rs = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
neo-storage = { path = "../neo-storage" }
