[package]
name = "neo-application-logs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "ApplicationLogs plugin for the Neo blockchain (execution-log persistence and RPC query support)"

[dependencies]
neo-vm-rs = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

neo-block = { workspace = true }

neo-event-handlers = { workspace = true }

neo-execution = { workspace = true }

neo-primitives = { workspace = true }

neo-system = { workspace = true }


neo-vm = { workspace = true }

neo-blockchain = { workspace = true }
neo-manifest = { workspace = true }
neo-network = { workspace = true }
neo-mempool = { workspace = true }

neo-storage = { workspace = true }
neo-crypto = { workspace = true }
neo-payloads = { workspace = true }
neo-script-builder = { workspace = true }

[dev-dependencies]
