[package]
name = "neo-base"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes     = { version = "1.10", default-features = false }
thiserror = { version = "2", default-features = false }

sha2   = { version = "0.10", default-features = false }
ripemd = { version = "0.1", default-features = false }

bs58   = { version = "0.5", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hex    = { version = "0.4", default-features = false, features = ["alloc"] }

chrono = { version = "0.4", optional = true}
serde  = { version = "1", default-features = false, features = ["alloc", "derive"] }

[features]
default = []

std = [
    "bs58/default",
    "bytes/std",
    "sha2/default",
    "thiserror/std",
    "chrono",
]

enclave = ["sha2/force-soft"]