[package]
name = "neo-blockchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Reth-style blockchain service for Neo (canonical home of Blockchain, LedgerContext, HeaderCache)"

[dependencies]
# Foundation
neo-primitives = { workspace = true }
neo-error = { workspace = true }
neo-io = { workspace = true }
neo-crypto = { workspace = true }
neo-storage = { workspace = true }
neo-payloads = { workspace = true }
neo-manifest = { workspace = true }
neo-vm = { workspace = true }
neo-vm-rs = { workspace = true }
neo-serialization = { workspace = true }
neo-mempool = { workspace = true }
neo-runtime = { workspace = true }
neo-state-service = { workspace = true }
neo-config = { workspace = true }
neo-execution = { workspace = true }
# Ledger-record codec (serialize_persisted_transaction_state /
# serialize_conflict_stub / serialize_hash_index_state) + native ids: the
# persist pipeline writes the records the LedgerContract reads.
neo-native-contracts = { workspace = true }

# External
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
hashbrown = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
num-bigint = { workspace = true }

[features]
default = []

[lints]
workspace = true
